Make all assertions silent.

--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -6,6 +6,7 @@
       - openssh_port | int
       - openssh_port | int > 0
       - openssh_port | int < 65536
+    quiet: yes
 
 - name: test if openssh_address_family is set correctly
   assert:
@@ -13,24 +14,28 @@
       - openssh_address_family is defined
       - openssh_address_family | length > 0
       - openssh_address_family in ["any", "inet", "inet6"]
+    quiet: yes
 
 - name: test if openssh_listen_address is set correctly
   assert:
     that:
       - openssh_listen_address is defined
       - openssh_listen_address | length > 0
+    quiet: yes
 
 - name: test if openssh_host_key is set correctly
   assert:
     that:
       - openssh_host_key is defined
       - openssh_host_key | length > 0
+    quiet: yes
 
 - name: test if openssh_rekey_limit is set correctly
   assert:
     that:
       - openssh_rekey_limit is defined
       - openssh_rekey_limit | length > 0
+    quiet: yes
 
 - name: test if openssh_syslog_facility is set correctly
   assert:
@@ -38,6 +43,7 @@
       - openssh_syslog_facility is defined
       - openssh_syslog_facility | length > 0
       - openssh_syslog_facility in ["DAEMON", "USER", "AUTH", "LOCAL0", "LOCAL1", "LOCAL2", "LOCAL3", "LOCAL4", "LOCAL5", "LOCAL6", "LOCAL7"]
+    quiet: yes
 
 - name: test if openssh_loglevel is set correctly
   assert:
@@ -45,12 +51,14 @@
       - openssh_loglevel is defined
       - openssh_loglevel | length > 0
       - openssh_loglevel in ["QUIET", "FATAL", "ERROR", "INFO", "VERBOSE", "DEBUG", "DEBUG1", "DEBUG2", "DEBUG3"]
+    quiet: yes
 
 - name: test if openssh_login_grace_time is set correctly
   assert:
     that:
       - openssh_login_grace_time is defined
       - openssh_login_grace_time | length > 0
+    quiet: yes
 
 - name: test if openssh_permit_root_login is set correctly
   assert:
@@ -58,6 +66,7 @@
       - openssh_permit_root_login is defined
       - openssh_permit_root_login | length > 0
       - openssh_permit_root_login in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_strict_modes is set correctly
   assert:
@@ -65,6 +74,7 @@
       - openssh_strict_modes is defined
       - openssh_strict_modes | length > 0
       - openssh_strict_modes in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_max_auth_tries is set correctly
   assert:
@@ -72,6 +82,7 @@
       - openssh_max_auth_tries is defined
       - openssh_max_auth_tries | int
       - openssh_max_auth_tries | int >= 0
+    quiet: yes
 
 - name: test if openssh_max_sessions is set correctly
   assert:
@@ -79,6 +90,7 @@
       - openssh_max_sessions is defined
       - openssh_max_sessions | int
       - openssh_max_sessions | int >= 0
+    quiet: yes
 
 - name: test if openssh_pub_key_authentication is set correctly
   assert:
@@ -86,30 +98,35 @@
       - openssh_pub_key_authentication is defined
       - openssh_pub_key_authentication | length > 0
       - openssh_pub_key_authentication in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_authorized_key_file is set correctly
   assert:
     that:
       - openssh_authorized_key_file is defined
       - openssh_authorized_key_file | length > 0
+    quiet: yes
 
 - name: test if openssh_authorized_prinicpals_file is set correctly
   assert:
     that:
       - openssh_authorized_prinicpals_file is defined
       - openssh_authorized_prinicpals_file | length > 0
+    quiet: yes
 
 - name: test if openssh_authorized_keys_command is set correctly
   assert:
     that:
       - openssh_authorized_keys_command is defined
       - openssh_authorized_keys_command | length > 0
+    quiet: yes
 
 - name: test if openssh_authorized_keys_command_user is set correctly
   assert:
     that:
       - openssh_authorized_keys_command_user is defined
       - openssh_authorized_keys_command_user | length > 0
+    quiet: yes
 
 - name: test if openssh_host_based_authentication is set correctly
   assert:
@@ -117,6 +134,7 @@
       - openssh_host_based_authentication is defined
       - openssh_host_based_authentication | length > 0
       - openssh_host_based_authentication in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_ignore_user_known_hosts is set correctly
   assert:
@@ -124,6 +142,7 @@
       - openssh_ignore_user_known_hosts is defined
       - openssh_ignore_user_known_hosts | length > 0
       - openssh_ignore_user_known_hosts in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_ignore_rhosts is set correctly
   assert:
@@ -131,6 +150,7 @@
       - openssh_ignore_rhosts is defined
       - openssh_ignore_rhosts | length > 0
       - openssh_ignore_rhosts in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_permit_empty_passwords is set correctly
   assert:
@@ -138,6 +158,7 @@
       - openssh_permit_empty_passwords is defined
       - openssh_permit_empty_passwords | length > 0
       - openssh_permit_empty_passwords in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_password_authentication is set correctly
   assert:
@@ -145,6 +166,7 @@
       - openssh_password_authentication is defined
       - openssh_password_authentication | length > 0
       - openssh_password_authentication in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_challenge_response_authentication is set correctly
   assert:
@@ -152,6 +174,7 @@
       - openssh_challenge_response_authentication is defined
       - openssh_challenge_response_authentication | length > 0
       - openssh_challenge_response_authentication in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_gssapi_authentication is set correctly
   assert:
@@ -159,6 +182,7 @@
       - openssh_gssapi_authentication is defined
       - openssh_gssapi_authentication | length > 0
       - openssh_gssapi_authentication in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_gssapi_cleanup_credentials is set correctly
   assert:
@@ -166,6 +190,7 @@
       - openssh_gssapi_cleanup_credentials is defined
       - openssh_gssapi_cleanup_credentials | length > 0
       - openssh_gssapi_cleanup_credentials in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_gssapi_strict_acceptor_check is set correctly
   assert:
@@ -173,6 +198,7 @@
       - openssh_gssapi_strict_acceptor_check is defined
       - openssh_gssapi_strict_acceptor_check | length > 0
       - openssh_gssapi_strict_acceptor_check in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_gssapi_key_exchange is set correctly
   assert:
@@ -180,6 +206,7 @@
       - openssh_gssapi_key_exchange is defined
       - openssh_gssapi_key_exchange | length > 0
       - openssh_gssapi_key_exchange in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_gssaip_enable_k5_users is set correctly
   assert:
@@ -187,6 +214,7 @@
       - openssh_gssaip_enable_k5_users is defined
       - openssh_gssaip_enable_k5_users | length > 0
       - openssh_gssaip_enable_k5_users in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_use_pam is set correctly
   assert:
@@ -194,6 +222,7 @@
       - openssh_use_pam is defined
       - openssh_use_pam | length > 0
       - openssh_use_pam in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_allow_agent_forwarding is set correctly
   assert:
@@ -201,6 +230,7 @@
       - openssh_allow_agent_forwarding is defined
       - openssh_allow_agent_forwarding | length > 0
       - openssh_allow_agent_forwarding in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_allow_tcp_forwarding is set correctly
   assert:
@@ -208,6 +238,7 @@
       - openssh_allow_tcp_forwarding is defined
       - openssh_allow_tcp_forwarding | length > 0
       - openssh_allow_tcp_forwarding in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_gateway_ports is set correctly
   assert:
@@ -215,6 +246,7 @@
       - openssh_gateway_ports is defined
       - openssh_gateway_ports | length > 0
       - openssh_gateway_ports in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_x11_forwarding is set correctly
   assert:
@@ -222,6 +254,7 @@
       - openssh_x11_forwarding is defined
       - openssh_x11_forwarding | length > 0
       - openssh_x11_forwarding in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_x11_display_offset is set correctly
   assert:
@@ -229,6 +262,7 @@
       - openssh_x11_display_offset is defined
       - openssh_x11_display_offset | int
       - openssh_x11_display_offset | int > 0
+    quiet: yes
 
 - name: test if openssh_x11_use_localhost is set correctly
   assert:
@@ -236,6 +270,7 @@
       - openssh_x11_use_localhost is defined
       - openssh_x11_use_localhost | length > 0
       - openssh_x11_use_localhost in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_permit_tty is set correctly
   assert:
@@ -243,6 +278,7 @@
       - openssh_permit_tty is defined
       - openssh_permit_tty | length > 0
       - openssh_permit_tty in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_print_motd is set correctly
   assert:
@@ -250,6 +286,7 @@
       - openssh_print_motd is defined
       - openssh_print_motd | length > 0
       - openssh_print_motd in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_print_last_log is set correctly
   assert:
@@ -257,6 +294,7 @@
       - openssh_print_last_log is defined
       - openssh_print_last_log | length > 0
       - openssh_print_last_log in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_tcp_keep_alive is set correctly
   assert:
@@ -264,6 +302,7 @@
       - openssh_tcp_keep_alive is defined
       - openssh_tcp_keep_alive | length > 0
       - openssh_tcp_keep_alive in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_permit_user_environment is set correctly
   assert:
@@ -271,6 +310,7 @@
       - openssh_permit_user_environment is defined
       - openssh_permit_user_environment | length > 0
       - openssh_permit_user_environment in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_compression is set correctly
   assert:
@@ -278,6 +318,7 @@
       - openssh_compression is defined
       - openssh_compression | length > 0
       - openssh_compression in ["yes", "no", "delayed"]
+    quiet: yes
 
 - name: test if openssh_client_alive_interval is set correctly
   assert:
@@ -285,6 +326,7 @@
       - openssh_client_alive_interval is defined
       - openssh_client_alive_interval | int
       - openssh_client_alive_interval | int >= 0
+    quiet: yes
 
 - name: test if openssh_client_alive_count_max is set correctly
   assert:
@@ -292,6 +334,7 @@
       - openssh_client_alive_count_max is defined
       - openssh_client_alive_count_max | int
       - openssh_client_alive_count_max | int >= 0
+    quiet: yes
 
 - name: test if openssh_show_patch_level is set correctly
   assert:
@@ -299,6 +342,7 @@
       - openssh_show_patch_level is defined
       - openssh_show_patch_level | length > 0
       - openssh_show_patch_level in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_use_dns is set correctly
   assert:
@@ -306,18 +350,21 @@
       - openssh_use_dns is defined
       - openssh_use_dns | length > 0
       - openssh_use_dns in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_pid_file is set correctly
   assert:
     that:
       - openssh_pid_file is defined
       - openssh_pid_file | length > 0
+    quiet: yes
 
 - name: test if openssh_max_startups is set correctly
   assert:
     that:
       - openssh_max_startups is defined
       - openssh_max_startups | length > 0
+    quiet: yes
 
 - name: test if openssh_permit_tunnel is set correctly
   assert:
@@ -325,33 +372,39 @@
       - openssh_permit_tunnel is defined
       - openssh_permit_tunnel | length > 0
       - openssh_permit_tunnel in ["yes", "no"]
+    quiet: yes
 
 - name: test if openssh_chroot_directory is set correctly
   assert:
     that:
       - openssh_chroot_directory is defined
       - openssh_chroot_directory | length > 0
+    quiet: yes
 
 - name: test if openssh_version_addendum is set correctly
   assert:
     that:
       - openssh_version_addendum is defined
       - openssh_version_addendum | length > 0
+    quiet: yes
 
 - name: test if openssh_banner is set correctly
   assert:
     that:
       - openssh_banner is defined
       - openssh_banner | length > 0
+    quiet: yes
 
 - name: test if openssh_accept_env is set correctly
   assert:
     that:
       - openssh_accept_env is defined
       - openssh_accept_env | length > 0
+    quiet: yes
 
 - name: test if openssh_subsystem is set correctly
   assert:
     that:
       - openssh_subsystem is defined
       - openssh_subsystem | length > 0
+    quiet: yes
