Fix: [208] File permissions not mentioned

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -28,6 +28,7 @@
   file:
     path: "{{ openssh_run_directory }}"
     state: directory
+    mode: "0755"
 
 - name: configure openssh
   template:
