Make the SFTP server location variable. Relates #2

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -96,7 +96,7 @@ openssh_accept_env:
   - LC_TIME
   - XMODIFIERS
 
-openssh_subsystem: sftp /usr/libexec/openssh/sftp-server
+openssh_subsystem: sftp {{ openssh_sftp_server }}
 
 # Restrict access to this (space separated list) of users.
 # For example: `openssh_allow_users: root my_user`
