--- a/vars/main.yml
+++ b/vars/main.yml
@@ -52,4 +52,4 @@ _openssh_sftp_server:
   default: /usr/libexec/openssh/sftp-server
   Debian: /usr/lib/openssh/sftp-server
 
-openssh_sftp_server: "{{ _openssh_sftp_server[ansible_os_family] | default(_openssh_sftp_server['default') }}"
+openssh_sftp_server: "{{ _openssh_sftp_server[ansible_os_family] | default(_openssh_sftp_server['default']) }}"
