--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -5,3 +5,4 @@
 repository:
   description: Install and configure openssh on your system.
   homepage: https://robertdebock.nl/
+  topics: openssh, ansible, molecule, tox, playbook, hacktoberfest
