--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,6 @@ env:
     - image="opensuse" tag="latest"
     - image="ubuntu" tag="latest"
     - image="ubuntu" tag="bionic"
-    - image="ubuntu" tag="xenial"
 
 cache:
   - pip
@@ -39,7 +38,7 @@ install:
   - pip install tox
 
 script:
-  - function retry { counter=0 ; until "$@" ; do exit=$? ; counter=$(($counter + 1)) ; if [ $counter -ge 3 ] ; then return $exit ; fi ; done ; return 0; } ; retry tox --parallel all
+  - function retry { counter=0 ; until "$@" ; do exit=$? ; counter=$(($counter + 1)) ; if [ $counter -ge 3 ] ; then return $exit ; fi ; done ; return 0; } ; retry tox
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
