--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -14,8 +14,5 @@
         line: AllowUsers root
       check_mode: yes
       register: openssh_check_if_allowusers_is_set
-
-    - name: assert results
-      assert:
-        that:
-          - openssh_check_if_allowusers_is_set is not changed
+      failed_when:
+        - openssh_check_if_allowusers_is_set is changed
