Empty line to start and dont restart when in checkmode, software is missing.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,6 +1,9 @@
 ---
 # handlers file for openssh
+
 - name: restart openssh
   service:
     name: "{{ openssh_service }}"
     state: restarted
+  when:
+    - not ansible_check_mode | bool
