Add (and change) mapping for Ubuntu focal and Ubuntu eoan. Thanks @garbast!
Relates #8

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -24,8 +24,10 @@ openssh_configuration_file: /etc/ssh/sshd_config
 _openssh_service:
   default: sshd
   Debian-bullseye: ssh
+  Ubuntu-19: ssh
+  Ubuntu-20: ssh
 
-openssh_service: "{{ _openssh_service[ansible_os_family ~ '-' ~ ansible_distribution_release] | default(_openssh_service['default']) }}"
+openssh_service: "{{ _openssh_service[ansible_distribution ~ '-' ~ ansible_distribution_release] | default(_openssh_service['default']) }}"
 
 _openssh_template_src:
   Alpine: sshd_config_Alpine.j2
